--- a/journal-covers.html
+++ b/journal-covers.html
@@ -60,7 +60,7 @@
                 <p class="dib v-mid f2 mt2 pt1">3</p>
               </div>
             </div>
-            <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, iterating through multiple drafts.</p>
+            <p class="w-100 w-80-l fr-ns tl-l tc f5 lh-copy">We work with you to refine the illustration, going through multiple drafts.</p>
           </div>
         </div>
         <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/step3.png"></div>
