--- a/index-revised.html
+++ b/index-revised.html
@@ -52,18 +52,18 @@
     <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-01.png" class="w-100"></div>
     <!-- <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-idea-2-07.svg" class="w-100"></div> -->
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
-    <p class="tc f3-l f4-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4">Scientific illustration and animation studio</p>
-    <div class="w-100 mw7 tc center">
+    <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4">Scientific illustration and animation studio</p>
+    <div class="w-100 mw7 tc center bb b--moon-gray bt">
       <!-- <div class="w-50-l w-100 fl">
         <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">Work</p></a>
         <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">About</p></a>
         <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">Blog</p></a>
       </div> -->
-      <div class="w-100 dt">
-        <a class="f6 link dim ph3-ns ph2 pv3 mb2 dark-gray ba b--moon-gray v-mid w-20 dtc" href="#0"><p class="f3-ns f5 ma0">About</p></a>
-        <a class="f6 link dim ph3-ns ph2 pv2 mb2 dark-gray bt bb br b--moon-gray v-mid w-20 dtc" href="#0"><img class="w3-ns w2 v-mid" src="mail.svg"></a>
-        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 dark-gray bt bb br b--moon-gray v-mid w-20 dtc" href="#0"><img class="w2 v-mid" src="images/logos/instagram_simple_icon.svg"></a>
-        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 dark-gray bt bb br b--moon-gray v-mid w-20 dtc" href="#0"><img class="w2 v-mid" src="images/logos/twitter.svg"></a>
+      <div class="w-100 dt mw7 center" style="font-size: 12px !important;">
+        <a class="f6 link dim ph3-ns ph2 pv3 mb2 black-80 br b--moon-gray v-mid w-20 dtc" href="#0"><p class="f3-ns f5 ma0">About</p></a>
+        <a class="f6 link dim ph3-ns ph2 pv2 mb2 br b--moon-gray v-mid w-20 dtc" href="mailto:sean@inform.studio"><img class="w3-ns w2 v-mid o-80" src="mail.svg"></a>
+        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 br b--moon-gray v-mid w-20 dtc" href="https://www.instagram.com/inform_science_studio/"><img class="w2-ns w1 v-mid o-80" src="images/logos/instagram_simple_icon.svg"></a>
+        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 v-mid w-20 dtc" href="https://twitter.com/inform_studio"><img class="w2-ns w1 v-mid o-80" src="images/logos/twitter.svg"></a>
       </div>
       <!-- <div class="mw3 w-100 dim pr3 pl2 fr"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
       <div class="mw3 w-100 dim pl3 pr2 fr"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div> -->
@@ -123,13 +123,13 @@
     <p class="tc mt5-ns mt4 mb0 f2-ns f3 dark-gray">Interested in working together?</p>
     <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
-  <div class="mt4 mt5-ns">
+  <div class="mt4 mt5-ns bt center b--moon-gray">
     <!-- <div class="center mw4 mb2 pl2 pr2 pb4 copyright w-100">
       <div class="w-50 pa2 pl3 dim fl"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div>
       <div class="w-50 pa2 pr3 dim fl"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
     </div> -->
     <div class="center mw6-l">
-      <p class="tc f7 gray mt2">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
   </div>
 </body>
