--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="tachyons.css">
   <style>
     .mw-image {
-      max-width: 34rem;
+      max-width: 32rem;
     }
     .image-container {
       padding-bottom:100%;
@@ -39,6 +39,11 @@
         font-size: 13px;
       }
     }
+    @media screen and (min-width: 30em) {
+      html {
+        font-size: 13px;
+      }
+    }
   </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
@@ -47,19 +52,35 @@
     <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-01.png" class="w-100"></div>
     <!-- <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-idea-2-07.svg" class="w-100"></div> -->
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
-    <p class="tc f2-l f3-m f3 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3">Scientific illustration and animation studio</p>
+    <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4">Scientific illustration and animation studio</p>
+    <div class="w-100 mw7 tc center bb b--moon-gray bt">
+      <!-- <div class="w-50-l w-100 fl">
+        <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">Work</p></a>
+        <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">About</p></a>
+        <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">Blog</p></a>
+      </div> -->
+      <div class="w-100 dt mw7 center" style="font-size: 12px !important;">
+        <a class="f6 link dim ph3-ns ph2 pv3 mb2 black-80 br b--moon-gray v-mid w-20 dtc" href="about.html"><p class="f3-ns f5 ma0">About</p></a>
+        <a class="f6 link dim ph3-ns ph2 pv2 mb2 br b--moon-gray v-mid w-20 dtc" href="mailto:sean@inform.studio"><img class="w3-ns w2 v-mid o-80" src="images/mail-square.svg"></a>
+        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 br b--moon-gray v-mid w-20 dtc" href="https://www.instagram.com/inform_science_studio/"><img class="w2-ns w1 v-mid o-80" src="images/logos/instagram_simple_icon.svg"></a>
+        <a class="f6 link dim ph3-ns ph2 pv2-ns pv1 mb2 v-mid w-20 dtc" href="https://twitter.com/inform_studio"><img class="w2-ns w1 v-mid o-80" src="images/logos/twitter.svg"></a>
+      </div>
+      <!-- <div class="mw3 w-100 dim pr3 pl2 fr"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
+      <div class="mw3 w-100 dim pl3 pr2 fr"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div> -->
+    </div>
+    <!-- <p class="f3-ns f4 mw7 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div> -->
-    <div class="cf grid-l mw7 center pb3 pt3-ns">
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+    <div class="cf grid-l mw8 center pb3 pt5-ns pt4">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
         <a href="journal-covers.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container br3 "><!-- originally no border shadow-3 -->
+          <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/cover-thumb.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3">
         <a href="infographics.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3">
             <img src="images/prospect-diagram.jpg" class="thumb-image">
@@ -67,7 +88,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
         <a href="scientific-illustration.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/parafermions.jpg" class="thumb-image">
@@ -75,7 +96,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
         <a href="explanatory-animation.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/moebius.gif" class="thumb-image">
@@ -83,7 +104,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
         <a href="data-visualization.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/dots.jpg" class="thumb-image">
@@ -91,7 +112,7 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa4 pb2 pa3-l pa2-m">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
         <a href="interaction-development.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/test.gif" class="thumb-image">
@@ -101,15 +122,11 @@
       </div>
     </div>
     <p class="tc mt5-ns mt4 mb0 f2-ns f3 dark-gray">Interested in working together?</p>
-    <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
-  <div class="mt4 mt5-ns">
-    <div class="center mw4 mb2 pl2 pr2 pb4 copyright w-100">
-      <div class="w-50 pa2 pl3 dim fl"><a href="https://twitter.com/inform_studio" class="o-70"><img src="images/logos/twitter.svg"></a></div>
-      <div class="w-50 pa2 pr3 dim fl"><a href="https://www.instagram.com/inform_science_studio/" class="o-70"><img src="images/logos/instagram_simple_icon.svg"></a></div>
-    </div>
+  <div class="mt4 mt5-ns bt center b--moon-gray">
     <div class="center mw6-l">
-      <p class="tc f7 gray mt2">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
   </div>
 </body>
