--- a/about.html
+++ b/about.html
@@ -23,12 +23,12 @@
       <!-- <p class="f4-ns f5 mw6 center lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     </div>
   </section>
-  <section class="w-100 mt0 pb5 ml4 pl4 mt5">
-    <div class="mw8 w-100 center pl2 pr2 dt">
+  <section class="w-100 mt0 pb5 ml4-l pl4-l mt5">
+    <div class="mw8 w-100 center pl2 pr2">
       <div class="dt-ns w-100">
-        <div class="w-20-ns dtc-ns v-top">
-          <div class="pa4 pt3 mt1 fl">
-            <img src="images/headshots/sean.jpg" class="br-100 h4 w4 dib" alt="avatar">
+        <div class="w-20-ns w-100 dtc-ns v-top">
+          <div class="pa4-l pa3 pt3-l pt3-m pt0 mt1 fl">
+            <img src="images/headshots/sean.jpg" class="br-100 w4 dib" alt="avatar">
           </div>
         </div>
         <div class="w-80-ns w-100 dtc-ns v-top">
