--- a/about.html
+++ b/about.html
@@ -33,8 +33,8 @@
         </div>
         <div class="w-80-ns w-100 dtc-ns v-top">
           <h2 class="f5 f4-ns tl mw6 mb1">Sean Kelley</h2>
-          <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustrator, Animator</h2>
-          <p class="f5-ns f6 lh-copy mw6">Sean has a background in physics and loves open source creative software.</p>
+          <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Animation, Development</h2>
+          <p class="f5-ns f6 lh-copy mw6">Sean has a background in physics and a passion for open-source creative software.</p>
           <div class="f6-ns f7 mw6">
             <a class="fl pr4" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
             <a class="fl pr4" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
