small text adjustments

--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -43,19 +43,19 @@
     <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f3-l f4 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
+        <p class="f4-ns f5 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
       </div>
       <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/moebius-hires.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f3-l f4 tl-l tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
+        <p class="f4-ns f5 tl-l tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
       </div>
       <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f3-l f4 tl-l tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
+        <p class="f4-ns f5 tl-l tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
       </div>
       <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
     </div>
