--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -24,10 +24,11 @@
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     </div>
   </section>
-  <section class="bt b--moon-gray bw1 bg-lightest-blue w-100 mt0 pb5 relative">
+  <section class="bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
+      <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
       <div class="w-100 dt-l mt5">
         <div class="w-40-l w-100 dtc-l v-mid lh-copy ma4 pa4 pt2 pb2 ma0-l mt0-l mw6 center ba b--moon-gray bg-light-gray shadow-3 bg-white"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
           <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
@@ -37,10 +38,9 @@
       </div>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
-  <section class="bg-white bt b--moon-gray bw1 w-100 mt0 pb5 relative">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
-    <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A simple animation can make all the difference.</p>
-    <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
+    <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A suitable animation for every situation.</p>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
