added description to about page

--- a/about.html
+++ b/about.html
@@ -13,9 +13,12 @@
   </header>
   <section class="bt b--moon-gray w-100 mt0">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="mw6 center f3-ns f4 pt4 dark-gray ttu tracked">About</p>
-      <div class="relative tc w-100 mw6 center pb4"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
-      <!-- <p class="f4-ns f5 mw6 center lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
+      <p class="mw6 center f3-ns f4 pt4 dark-gray">Science and art combined.</p>
+      <p class="f4-ns f5 mw6 center lh-copy">Engaging and informative visuals that communicate the beauty of science.</p>
+      <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Effective communication</p>
+      <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science communicators to ensure the science is communicated accurately and effectively. The message is delivered in a way that best engages and inspires each audience.</p>
+      <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Comprehensive services</p>
+      <p class="f5-ns f6 mw6 center lh-copy">We are a full-service scientific illustration and animation studio, meaning we can produce visuals appropriate for each situation—from attractive illlustrations and technical drawings to detailed animation and interactive experiences.</p>
     </div>
   </section>
   <section class="w-100 mt0 pb5 ml4-l pl4-l mt5">
@@ -31,8 +34,8 @@
           <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Animation, Development</h2>
           <p class="f5-ns f6 lh-copy mw6">Sean has a background in physics and a passion for open-source creative software.</p>
           <div class="f6-ns f7 mw6">
-            <a class="fl pr4" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
-            <a class="fl pr4" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
+            <a class="fl pr4 pt0-ns" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
+            <a class="fl pr4 pt2 pt0-ns" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
           </div>
         </div>
       </div>
