--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -41,7 +41,7 @@
   <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A suitable animation for every situation.</p>
-    <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation, creating engaging visuals appropriate for your audience.</p>
+    <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation to your needs, creating engaging visuals appropriate for your audience.</p>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
         <p class="f4-ns f5 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
