--- a/interaction-development.html
+++ b/interaction-development.html
@@ -11,7 +11,7 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bg-lightest-blue bt b--moon-gray w-100 mt0 pb5">
+  <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
       <p class="tc f1-ns f2 pt4 mb3 dark-gray">Interaction Development</p>
       <!-- <h1 class="tc f3-ns f4">...an animation may save a few more.</h1> -->
