--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <div class="mw8 w-100 center pl2 pr2">
       <p class="mw6 center f3-ns f4 pt4 dark-gray">Science and art combined.</p>
       <p class="f4-ns f5 mw6 center lh-copy">Engaging and informative visuals that communicate the beauty of science.</p>
-      <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Effective communication</p>
+      <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Effective collaboration</p>
       <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science communicators to ensure the science is communicated accurately and effectively. The message is delivered in a way that best engages and inspires each audience.</p>
       <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Comprehensive services</p>
       <p class="f5-ns f6 mw6 center lh-copy">We are a full-service scientific illustration and animation studio, meaning we can produce visuals appropriate for each situation—from attractive illlustrations and technical drawings to detailed animation and interactive experiences.</p>
