--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -6,10 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
+  <style>
+    .bg-lightest-gray {
+      background-color: #fafafa;
+    }
+    .bg-lighter-gray {
+      background-color: #fcfcfc;
+    }
+    .b--lighter-gray {
+      border-color: #fcfcfc;
+    }
+  </style>
 </head>
-<body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
-  <header class="w-100">
-    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
+<body class="sans-serif w-100 center black-70 f6 bg-white">
+  <header class="w-100 pt2 pb2">
+    <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
@@ -24,39 +35,39 @@
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     </div>
   </section>
-  <section class="bt b--moon-gray w-100 mt0 pb5 relative">
+  <section class="bt b--moon-gray w-100 mt0 pb5 relative bg-lightest-gray bw1">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">An appropriate animation can fill conceptual gaps, supporting a description by providing hard-to-visualize details.</p>
       <div class="w-100 dt-l mt5">
-        <div class="w-40-l w-100 dtc-l v-mid lh-copy ma4 pa4 pt2 pb2 ma0-l mt0-l mw6 center ba b--moon-gray bg-light-gray shadow-3 bg-white"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
+        <div class="w-40-l w-100 dtc-l v-mid lh-copy ma4 pa4 pt2 pb2 ma0-l mt0-l mw6 center ba b--moon-gray bg-lighter-gray shadow-3"><h4 class="tc">Drumhead modes</h4><p><span class="b">"</span>A two-dimensional elastic membrane under tension can support transverse vibrations. The properties of an idealized drumhead can be modeled by the vibrations of a circular membrane of uniform thickness, attached to a rigid frame. Due to the phenomenon of resonance, at certain vibration frequencies, its resonant frequencies, the membrane can store vibrational energy, the surface moving in a characteristic pattern of standing waves. This is called a normal mode. A membrane has an infinite number of these normal modes, starting with a lowest frequency one called the fundamental mode.<span class="b">"</span></p>
           <p class="tr pr4 f7">Source: <a href="https://en.wikipedia.org/wiki/Vibrations_of_a_circular_membrane" target="_blank">Wikipedia</a></p>
         </div>
-        <div class="w-20-l w-100 dtc-l center mw6 v-mid tc mb0"><h1 class="mt0">versus</h1></div>
-        <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6"><img src="images/mode_2-small.gif" class="center ba b--moon-gray bg-light-gray shadow-3 bg-white"></div>
+        <div class="w-20-l w-100 dtc-l center mw6 v-mid tc mb0"><h2 class="mt0">versus</h2></div>
+        <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6"><img src="images/mode_2-small.gif" class="center ba b--moon-gray bg-lighter-gray shadow-3"></div>
       </div>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative bw1">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A suitable animation for every situation.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation to your needs, creating engaging visuals appropriate for your audience.</p>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f4-ns f5 tl-l tc center lh-copy mb3">From short cartoons, for an article or presentation<span class="f6">...</span></p>
+        <p class="f4-ns f5 tc center lh-copy mb3 tr">From short cartoons, for an article or presentation<span class="f6">...</span></p>
       </div>
       <div class="w-50-l w-100 dtc-l pa4 ba b--moon-gray shadow-3 mw6 center mr4-l"><img src="images/moebius-hires.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f4-ns f5 tl-l tc center lh-copy mb3"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
+        <p class="f4-ns f5 tc center lh-copy mb3 tr"><span class="f6">...</span>to in-depth explanatory videos<span class="f6">...</span></p>
       </div>
       <div class="w-50-l w-100 dtc-l pa3 ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #f5f5f5"><img src="images/in-depth-animation.gif" class="center"></div>
     </div>
     <div class="w-100 dt-l mt5">
       <div class="w-50-l w-100 dtc-l v-mid lh-copy pr4-l pl4-l">
-        <p class="f4-ns f5 tl-l tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
+        <p class="f4-ns f5 tc center lh-copy mb3"><span class="f6">...</span>we'll bring your vision to life!</p>
       </div>
       <div class="w-50-l w-100 dtc-l ba b--moon-gray shadow-3 mw6 center mr4-l" style="background-color: #191d20"><img src="images/bring-to-life.gif" class="center"></div>
     </div>
@@ -70,9 +81,9 @@
       <p class="f6 tc b mb1">Building a quantum computer with atomic ions</p>
       <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
     </div>
-    <div class=" absolute h-50 bg-light-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
+    <div class=" absolute h-50 bg-lighter-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
   </section>
-  <section class="w-100 bg-light-gray bt b--light-gray pb6-ns pb5">
+  <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray mt4">Have a project in mind?</p>
       <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Let us know<span><img src="images/mail.svg" class="w2 ml1"></span></a> and we'll get to work.</p>
@@ -80,7 +91,7 @@
   </section>
   <footer>
     <div class="bt b--moon-gray center">
-      <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
+      <p class="tc f7 gray mt2 mb2">© 2018 Inform Studio</p>
     </div>
   </footer>
 </body>
