small color adjustments

--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -35,7 +35,7 @@
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
     </div>
   </section>
-  <section class="bt b--moon-gray w-100 mt0 pb5 relative bg-lightest-gray bw1">
+  <section class="bt b--moon-gray w-100 mt0 pb5 relative bg-lightest-gray">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc mt5 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
@@ -49,7 +49,7 @@
       </div>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative bw1">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc mt5 lh-copy mb3">A suitable animation for every situation.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation to your needs, creating engaging visuals appropriate for your audience.</p>
@@ -81,7 +81,7 @@
       <p class="f6 tc b mb1">Building a quantum computer with atomic ions</p>
       <p class="f7 tc mt0">Client: Joint Quantum Institute</p>
     </div>
-    <div class=" absolute h-50 bg-lighter-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
+    <div class=" absolute h-50 bg-lighter-gray w-100 center bottom-0 bt b--moon-gray"></div>
   </section>
   <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
