--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -6,6 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="tachyons.css">
+  <style>
+    .bg-lightest-gray {
+      background-color: #fafafa;
+    }
+    .bg-lighter-gray {
+      background-color: #fcfcfc;
+    }
+    .b--lighter-gray {
+      border-color: #fcfcfc;
+    }
+  </style>
 </head>
 <body class="sans-serif w-100 center black-70 f6 bg-white pt2 pb2">
   <header class="w-100">
@@ -19,7 +30,7 @@
       <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
   </section>
-  <section class="w-100 pl2 pr2 bt b--moon-gray bw1" style="background-color: rgb(12, 25, 32)">
+  <section class="w-100 pl2 pr2 bt b--moon-gray" style="background-color: rgb(12, 25, 32)">
     <div class="mw8 w-100 center">
       <!-- <p class="tc f3-ns f4 mt5">How it works:</p> -->
       <div class="dt-ns w-100">
@@ -38,7 +49,7 @@
       <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div> -->
     </div>
   </section>
-  <section class="w-100 pl2 pr2 bt b--moon-gray bw1" style="background-color: rgb(1, 5, 8)">
+  <section class="w-100 pl2 pr2 bt b--moon-gray" style="background-color: rgb(1, 5, 8)">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
         <div class="w-60-ns w-100 dtc-ns v-mid"><img src="images/illustration/emsquid.jpg"></div>
@@ -78,9 +89,9 @@
         </div>
       </div>
     </div>
-    <div class=" absolute h-50 bg-light-gray w-100 center bottom-0 bt b--moon-gray bw1"></div>
+    <div class=" absolute h-50 bg-lighter-gray w-100 center bottom-0 bt b--moon-gray"></div>
   </section>
-  <section class="w-100 bg-light-gray bt b--light-gray pb6-ns pb5">
+  <section class="w-100 bg-lighter-gray bt b--lighter-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray">Want to collaborate?</p>
       <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
