--- a/journal-covers.html
+++ b/journal-covers.html
@@ -25,21 +25,21 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bt b--moon-gray w-100 mt0 pb5 bg-lighter-gray">
+  <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
       <p class="tc f1-ns f2 pt4 mb3 dark-gray">Want to showcase your research?</p>
       <h1 class="tc f3-ns f4">We've got you covered.</h1>
       <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p>
     </div>
   </section>
-  <section class="w-100 pl2 pr2 bt b--moon-gray">
+  <section class="w-100 pl2 pr2 bt b--moon-gray bg-lighter-gray pb5">
     <div class="mw8 w-100 center">
       <p class="tc f3-ns f4 mt5">How it works:</p>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
           <div class="pl4 pr4 tc">
             <div class="w-20-l w-100">
-              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center bg-white">
                 <p class="dib v-mid f2 mt2 pt1">1</p>
               </div>
             </div>
@@ -52,7 +52,7 @@
         <div class="w-50-ns dtc-ns v-mid">
           <div class="pl4 pr4 tc">
             <div class="w-20-l w-100">
-              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center bg-white">
                 <p class="dib v-mid f2 mt2 pt1">2</p>
               </div>
             </div>
@@ -65,7 +65,7 @@
         <div class="w-50-ns dtc-ns v-mid">
           <div class="pl4 pr4 tc">
             <div class="w-20-l w-100">
-              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center bg-white">
                 <p class="dib v-mid f2 mt2 pt1">3</p>
               </div>
             </div>
@@ -78,7 +78,7 @@
         <div class="w-50-ns dtc-ns v-mid">
           <div class="pl4 pr4 tc">
             <div class="w-20-l w-100">
-              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center">
+              <div class="br-100 ba h3 tc w3 shadow-3 fl-l center bg-white">
                 <p class="dib v-mid f2 mt2 pt1">4</p>
               </div>
             </div>
@@ -89,7 +89,7 @@
       </div>
     </div>
   </section>
-  <section class="w-100 bt b--moon-gray bg-lighter-gray pb6-ns pb5 mt5">
+  <section class="w-100 bt b--moon-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
       <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="images/mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
