new mobile view

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang = "en">
 <head>
-  <title>Journal Covers</title>
+  <title>About Us</title>
   <meta charset = "UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -26,7 +26,7 @@
       <div class="dt-ns w-100">
         <div class="w-20-ns w-100 dtc-ns v-top">
           <div class="pa4-l pa3 pt3-l pt3-m pt0 mt1 fl">
-            <img src="images/headshots/sean.jpg" class="br-100 w4 dib" alt="avatar">
+            <img src="images/headshots/sean.jpg" class="br-100 w4 dib ba b--moon-gray" alt="avatar">
           </div>
         </div>
         <div class="w-80-ns w-100 dtc-ns v-top">
@@ -39,6 +39,22 @@
           </div>
         </div>
       </div>
+      <!-- <div class="dt-ns w-100 pt3-ns pt5">
+        <div class="w-20-ns w-100 dtc-ns v-top">
+          <div class="pa4-l pa3 pt3-l pt3-m pt0 mt1 fl">
+            <img src="images/headshots/alexane-headshot.jpg" class="br-100 w4 dib ba b--moon-gray" alt="avatar">
+          </div>
+        </div>
+        <div class="w-80-ns w-100 dtc-ns v-top">
+          <h2 class="f5 f4-ns tl mw6 mb1">Alexane Vivet</h2>
+          <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Graphic Design</h2>
+          <p class="f5-ns f6 lh-copy mw6"></p>
+          <div class="f6-ns f7 mw6">
+            <a class="fl pr4 pt0-ns" href=""><span><img src="images/mail.svg" class="w1 mr1"></span>alex@inform.studio</a>
+            <a class="fl pr4 pt2 pt0-ns" href=""><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@alexanevivet</a>
+          </div>
+        </div>
+      </div> -->
     </div>
   </section>
   <footer>
