--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
 <body class="sans-serif w-100 center black-70 f6 bg-white pa2 relative">
   <div class="mw9-l mw8-m center pl4-l pr4-l mt4-l mt3-m mt2">
     <!-- originally mt5-ns -->
-    <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-01.png" class="w-100"></div>
+    <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5">
+      <img src="images/logo-01.png" class="w-100 dn db-ns">
+      <img src="images/logo-mobile.png" class="w-100 dn-ns">
+    </div>
     <!-- <div class="center mw6-l mw5-m pr5-l pl5-l pa0-m pr5 pl5"><img src="images/logo-idea-2-07.svg" class="w-100"></div> -->
     <!-- <p class="f-headline-l f-inform-m f2 fw8 black tc ma0"><b>inform</b></p> -->
-    <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4">Scientific illustration and animation studio</p>
+    <p class="tc f2-l f3-m f5 mw9-l mw7 mt0 center pl2-ns pr2-ns dark-gray pl3 pr3 mb4-ns mb3">Scientific illustration and animation studio</p>
     <div class="w-100 mw7 tc center bb b--moon-gray bt">
       <!-- <div class="w-50-l w-100 fl">
         <a class="f6 link dim ph3 pv3 mb2 dib dark-gray bg-lightest-blue ba b--gray v-mid w-30" href="#0"><p class="f3-ns f4 ma0">Work</p></a>
@@ -72,23 +75,39 @@
     <!-- <p class="tc mt5-ns mt5 f3-ns f4">We specialize in:</p> -->
     <!-- <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100 ma0">Under construction - check back soon for more details.</p></div> -->
     <div class="cf grid-l mw8 center pb3 pt5-ns pt4">
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="journal-covers.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container br3 ">
+          <div class="relative ba b--gray grow pointer image-container br3">
             <img src="images/cover-thumb.jpg" class="thumb-image">
             <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Journal Covers</h4></div>
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3">
-        <a href="infographics.html" class="dark-gray">
-          <div class="relative ba b--gray grow pointer image-container br3">
-            <img src="images/prospect-diagram.jpg" class="thumb-image">
-            <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Infographics</h4></div>
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/cover-thumb.jpg" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Journal Covers</p></div>
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa3 dn db-ns">
+        <a href="technical-graphics.html" class="dark-gray">
+          <div class="relative ba b--gray grow pointer image-container br3">
+            <img src="images/prospect-diagram.jpg" class="thumb-image">
+            <div class="bg-white absolute w-100 bottom-0 bt b--moon-gray"><h4 class="tc pa3 ma0 f4-l f5">Technical Graphics</h4></div>
+          </div>
+        </a>
+      </div>
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/prospect-diagram.jpg" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Technical Graphics</p></div>
+          </div>
+        </a>
+      </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="scientific-illustration.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/parafermions.jpg" class="thumb-image">
@@ -96,7 +115,15 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/parafermions.jpg" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Scientific Illustration</p></div>
+          </div>
+        </a>
+      </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="explanatory-animation.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/moebius.gif" class="thumb-image">
@@ -104,7 +131,15 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/moebius.gif" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Explanatory Animation</p></div>
+          </div>
+        </a>
+      </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="data-visualization.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/dots.jpg" class="thumb-image">
@@ -112,7 +147,15 @@
           </div>
         </a>
       </div>
-      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3">
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/dots.jpg" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Data Visualization</p></div>
+          </div>
+        </a>
+      </div>
+      <div class="w-third-l w-50-ns w-100 mw-image center fl-ns pa2 pa3 dn db-ns">
         <a href="interaction-development.html" class="dark-gray">
           <div class="relative ba b--gray grow pointer image-container br3 ">
             <img src="images/test.gif" class="thumb-image">
@@ -120,11 +163,19 @@
           </div>
         </a>
       </div>
+      <div class="w-100 center dn-ns mb3">
+        <a href="journal-covers.html" class="dark-gray no-underline">
+          <div class="relative ba b--gray pointer dt">
+            <img src="images/test.gif" class="dtc w-100 br b--moon-gray">
+            <div class="w-70 dtc v-mid"><p class="f4 tc">Interaction Development</p></div>
+          </div>
+        </a>
+      </div>
     </div>
     <p class="tc mt5-ns mt4 mb0 f2-ns f3 dark-gray">Interested in working together?</p>
     <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
-  <div class="mt4 mt5-ns bt center b--moon-gray">
+  <div class="mt5 bt center b--moon-gray">
     <div class="center mw6-l">
       <p class="tc f7 gray mt2 mb0">© 2018 Inform Studio</p>
     </div>
