small text adjustments

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <a href="journal-covers.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/cover-thumb.jpg" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Journal Covers</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Journal Covers</p></div>
           </div>
         </a>
       </div>
@@ -103,7 +103,7 @@
         <a href="technical-graphics.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/prospect-diagram.jpg" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Technical Graphics</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Technical Graphics</p></div>
           </div>
         </a>
       </div>
@@ -119,7 +119,7 @@
         <a href="scientific-illustration.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/parafermions.jpg" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Scientific Illustration</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Scientific Illustration</p></div>
           </div>
         </a>
       </div>
@@ -135,7 +135,7 @@
         <a href="explanatory-animation.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/moebius.gif" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Explanatory Animation</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Explanatory Animation</p></div>
           </div>
         </a>
       </div>
@@ -151,7 +151,7 @@
         <a href="data-visualization.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/dots.jpg" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Data Visualization</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Data Visualization</p></div>
           </div>
         </a>
       </div>
@@ -167,7 +167,7 @@
         <a href="interaction-development.html" class="dark-gray no-underline">
           <div class="relative ba b--moon-gray pointer dt">
             <img src="images/test.gif" class="dtc w-100 br b--moon-gray">
-            <div class="w-70 dtc v-mid"><p class="f4 tc">Interaction Development</p></div>
+            <div class="w-70 dtc v-mid"><p class="f4 pl3">Interaction Development</p></div>
           </div>
         </a>
       </div>
