mobile layout changes

--- a/journal-covers.html
+++ b/journal-covers.html
@@ -25,16 +25,16 @@
   <header class="w-100">
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb2 mw8 center pl2 pr2"><b class="fw8">inform</b>studio</p></a>
   </header>
-  <section class="bt b--moon-gray w-100 mt0 pb5">
+  <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Want to showcase your research?</p>
-      <h1 class="tc f3-ns f4">We've got you covered.</h1>
-      <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p>
+      <p class="tc-ns f1-ns f2 pt4-ns pt2 mb3 dark-gray">Want to showcase your research?</p>
+      <h1 class="tc-ns f3-ns f4">We've got you covered.</h1>
+      <p class="f4-ns f5 mw6 center mt5-ns mt4 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p>
     </div>
   </section>
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lighter-gray pb5">
     <div class="mw8 w-100 center">
-      <p class="tc f3-ns f4 mt5">How it works:</p>
+      <p class="tc f3-ns f4 mt5-ns mt4">How it works:</p>
       <div class="dt-ns w-100 mt4">
         <div class="w-50-ns dtc-ns v-mid">
           <div class="pl4 pr4 tc">
