--- a/journal-covers.html
+++ b/journal-covers.html
@@ -10,14 +10,16 @@
     .permissions {
       margin-top: -0.3rem;
     }
-    .bg-lightest-gray {
-      background-color: #fafafa;
-    }
-    .bg-lighter-gray {
-      background-color: #fcfcfc;
-    }
-    .b--lighter-gray {
-      border-color: #fcfcfc;
+    @media screen and (min-width: 30em) {
+      .bg-lightest-gray {
+        background-color: #fafafa;
+      }
+      .bg-lighter-gray {
+        background-color: #fcfcfc;
+      }
+      .b--lighter-gray {
+        border-color: #fcfcfc;
+      }
     }
   </style>
 </head>
