--- a/explanatory-animation.html
+++ b/explanatory-animation.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </section>
-  <section class="bt-ns b--moon-gray w-100 mt0 pb5-ns pb4 relative bg-lightest-gray">
+  <section class="bt b--moon-gray w-100 mt0 pb5-ns pb4 relative bg-lightest-gray">
     <div class="mw8 w-100 center pa2 pr4-l pl4-l">
       <p class="f2-ns f3 mw6 center tc-ns mt5-ns mt4 lh-copy mb3">Sometimes words fall short.</p>
       <p class="f4-ns f5 mw6 center mt4 lh-copy">Even with an eloquent vocabulary, it can be difficult to describe how something looks—especially when dealing with a complex process or unfamiliar phenomenon.</p>
@@ -45,9 +45,8 @@
         <div class="w-20-l w-100 dtc-l center mw6 v-mid tc mb0"><h2 class="mt0">versus</h2></div>
         <div class="w-40-l w-100 dtc-l v-mid pa4 pa0-l pt2 center mw6"><img src="images/mode_2-small.gif" class="center ba b--moon-gray bg-lighter-gray shadow-3"></div>
       </div>
-      <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
   </section>
-  <section class="bg-white bt-ns b--moon-gray w-100 mt0 pb5-ns pb4 relative">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc-ns mt5-ns mt4 lh-copy mb3">A suitable animation for every situation.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">We'll tailor the visual complexity and scope of the animation to your needs, creating engaging visuals appropriate for your audience.</p>
