mobile layout changes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="journal-covers.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/cover-thumb.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Journal Covers</p></div>
           </div>
@@ -88,7 +88,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="technical-graphics.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/prospect-diagram.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Technical Graphics</p></div>
           </div>
@@ -104,7 +104,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="scientific-illustration.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/parafermions.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Scientific Illustration</p></div>
           </div>
@@ -120,7 +120,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="explanatory-animation.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/moebius.gif" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Explanatory Animation</p></div>
           </div>
@@ -136,7 +136,7 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="data-visualization.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/dots.jpg" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Data Visualization</p></div>
           </div>
@@ -152,15 +152,15 @@
       </div>
       <div class="w-100 center dn-ns mb3">
         <a href="interaction-development.html" class="dark-gray no-underline">
-          <div class="relative ba b--moon-gray pointer dt">
+          <div class="relative bl bt bb b--moon-gray pointer dt">
             <img src="images/test.gif" class="dtc w-100 br b--moon-gray">
             <div class="w-70 dtc v-mid"><p class="f5 pl3">Interaction Development</p></div>
           </div>
         </a>
       </div>
     </div>
-    <p class="tc mt5-ns mt4 mb0 f2-ns f3 dark-gray">Interested in working together?</p>
-    <p class="f4-ns f5 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
+    <p class="tc mt5-ns mt4 mb0 f2-ns f4 dark-gray">Interested in working together?</p>
+    <p class="f4-ns f6 tc pb3"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a>  and we'll make it happen.</p>
   </div>
   <div class="mt5 bt center b--moon-gray">
     <div class="center mw6-l">
