--- a/scientific-illustration.html
+++ b/scientific-illustration.html
@@ -93,7 +93,7 @@
   <section class="w-100 bg-lighter-gray bt b--lighter-gray b--white pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mb0 f2-ns f3 dark-gray">Want to collaborate?</p>
-      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Get in touch<span><img src="images/mail.svg" class="w2 ml1"></span></a> and let's discuss your project.</p>
     </div>
   </section>
   <footer>
