--- a/journal-covers.html
+++ b/journal-covers.html
@@ -94,7 +94,7 @@
   <section class="w-100 bt b--moon-gray pb6-ns pb5">
     <div class="mw8 w-100 center">
       <p class="tc mt6-ns mt5 mb0 f2-ns f3 dark-gray">Ready to get started?</p>
-      <p class="f5 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="images/mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
+      <p class="f5-ns f6 tc"><a class="b no-underline dark-gray bb" href="mailto:sean@inform.studio">Contact us<span><img src="images/mail.svg" class="w2 ml1"></span></a> for a consultation.</p>
     </div>
   </section>
   <footer>
