--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -13,7 +13,8 @@
   </header>
   <section class="bt b--moon-gray w-100 mt0 pb5">
     <div class="mw8 w-100 center pl2 pr2">
-      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Navigational aids for a complex world.</p>
+      <!-- <p class="tc f1-ns f2 pt4 mb3 dark-gray">Navigational aids for a complex world.</p> -->
+      <p class="tc f1-ns f2 pt4 mb3 dark-gray">Technical Graphics</p>
       <h1 class="tc f3-ns f4">Graphs, charts, diagrams, and more.</h1>
       <!-- <p class="f4-ns f5 mw6 center mt5 lh-copy">The hard part is done—its time to share your work! A custom illustration is a great way to promote your research, and can be used for conference presentations, posters, lab websites, social media, and much more.</p> -->
       <div class="relative tc w-100 mw6 center"><p class="tc bg-yellow absolute pa2 w-100">Under construction - check back soon for more details.</p></div>
