fix about page layout

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <a href="index.html" class="no-underline black-70"><p class="tc f4-ns f5 mt0 mb0 mw8 center pa2"><b class="fw8">inform</b>studio</p></a>
   </header>
   <section class="bt b--moon-gray w-100 mt0">
-    <div class="mw8 w-100 center pl2 pr2">
+    <div class="mw8 w-100 center pl4 pr4">
       <p class="mw6 center f3-ns f4 pt4 dark-gray">Science and art combined.</p>
       <p class="f4-ns f5 mw6 center lh-copy">Engaging and informative visuals that communicate the beauty of science.</p>
       <p class="mw6 center f5-ns f6 pt4 dark-gray ttu tracked">Full-service studio</p>
@@ -21,21 +21,21 @@
       <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science media to ensure the science is communicated accurately and effectively. The message is delivered in a way that best engages and inspires each audience.</p>
     </div>
   </section>
-  <section class="w-100 mt0 pb5 ml4-l pl4-l mt5">
-    <div class="mw8 w-100 center pl2 pr2">
+  <section class="w-100 mt0 pb5 center mt5-ns mt4">
+    <div class="mw8-l mw6 w-100 center pl5-l pl0-m pl4 pr4 pr0-ns">
       <div class="dt-ns w-100">
         <div class="w-20-ns w-100 dtc-ns v-top">
-          <div class="pa4-l pa3 pt3-l pt3-m pt0 mt1 fl">
-            <img src="images/headshots/sean.jpg" class="br-100 w4 dib ba b--moon-gray" alt="avatar">
+          <div class="pa3-l pa3-m pa2 pb0 pt0 mt1 fr-ns">
+            <img src="images/headshots/sean.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray" alt="avatar">
           </div>
         </div>
         <div class="w-80-ns w-100 dtc-ns v-top">
-          <h2 class="f5 f4-ns tl mw6 mb1">Sean Kelley</h2>
+          <h2 class="f5 f4-ns mw6 mb1">Sean Kelley</h2>
           <h2 class="f6-ns f7 v-bottom ma0 black-60">Illustration, Animation, Development</h2>
           <p class="f5-ns f6 lh-copy mw6">Sean has a background in physics and a passion for open-source creative software.</p>
-          <div class="f6-ns f7 mw6">
-            <a class="fl pr4 pt0-ns" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
-            <a class="fl pr4 pt2 pt0-ns" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
+          <div class="f6-ns f7 mw6 w-100">
+            <a class="fl-ns pr4-ns pt0-ns w-100" href="mailto:sean@inform.studio"><span><img src="images/mail.svg" class="w1 mr1"></span>sean@inform.studio</a>
+            <a class="fl pr4-ns pt2 w-100" href="https://twitter.com/mnemist"><span><img src="images/logos/twitter.svg" class="w1 mr1 v-mid o-70"></span>@mnemist</a>
           </div>
         </div>
       </div>
