fix about page layout

--- a/about.html
+++ b/about.html
@@ -21,11 +21,11 @@
       <p class="f5-ns f6 mw6 center lh-copy">We work closely with scientists, educators, and science media to ensure the science is communicated accurately and effectively. The message is delivered in a way that best engages and inspires each audience.</p>
     </div>
   </section>
-  <section class="w-100 mt0 pb5 center mt5-ns mt4">
+  <section class="w-100 mt0 pb5 center mt5-ns mt4 pl3-m pr4-m">
     <div class="mw8-l mw6 w-100 center pl5-l pl0-m pl4 pr4 pr0-ns">
       <div class="dt-ns w-100">
         <div class="w-20-ns w-100 dtc-ns v-top">
-          <div class="pa3-l pa3-m pa2 pb0 pt0 mt1 fr-ns">
+          <div class="pa4-l pa3-m pl0-m pa0 mt1 fr-ns">
             <img src="images/headshots/sean.jpg" class="br-100 w4-ns w3 dib ba b--moon-gray" alt="avatar">
           </div>
         </div>
