fix mobile view of triple-point banner

--- a/technical-graphics.html
+++ b/technical-graphics.html
@@ -48,15 +48,16 @@
   <section class="w-100 pl2 pr2 bt b--moon-gray bg-lightest-gray">
     <div class="mw8 w-100 center">
       <div class="dt-ns w-100">
-        <div class="w-100-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner-1.png"></div>
+        <div class="w-50-ns w-100 dtc-ns v-mid"><img src="images/triple-point-banner-2.png"></div>
       </div>
     </div>
   </section>
-  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-ns pb4 relative">
+  <section class="bg-white bt b--moon-gray w-100 mt0 pb5-l pb0 relative">
     <div class="mw8 w-100 center pr4-l pl4-l pa2">
     <p class="f2-ns f3 mw7 center tc-ns mt5-ns mt4 lh-copy mb3">An illustration for every situation.</p>
     <p class="f4-ns f5 mw6 center mt4 lh-copy">From simple cartoons to detailed diagrams, we'll adjust the style and complexity of a graphic to meet your needs.</p>
-    <p class="f3-ns f4 mw6 center mt4 lh-copy center tc mt5">We specialize in:</p>
+    <p class="f3-ns f4 mw6 center mt4 lh-copy center tc mt5-ns mt4">We specialize in:</p>
     <div class="w-100 cf mt4">
     <div class="w-50-ns w-100 fl-ns pa3">
       <div class="w-100 pa1 pb0 ba b--moon-gray shadow-3 mw6 center relative">
